Split apart trackball and keyboard mouse functionality.  Trackball is now turned off by default.  You must press the space bar to activate it and press the space bar again to deactivate it if you want to use nav tab.  A similar procedure will be used to cycle through multiple nav systems in the future.

--- a/VE_Xplorer/XplorerHandlers/VE_XplorerLib.vcproj
+++ b/VE_Xplorer/XplorerHandlers/VE_XplorerLib.vcproj
@@ -759,6 +759,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\KeyboardMouse.cxx"
+				>
+			</File>
+			<File
 				RelativePath=".\MaterialModeUpdateEH.cxx"
 				>
 			</File>
@@ -812,10 +816,6 @@
 			</File>
 			<File
 				RelativePath=".\TextureBasedEventHandler.cxx"
-				>
-			</File>
-			<File
-				RelativePath=".\trackball.cxx"
 				>
 			</File>
 		</Filter>
@@ -1108,6 +1108,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\KeyboardMouse.h"
+				>
+			</File>
+			<File
 				RelativePath=".\MaterialModeUpdateEH.h"
 				>
 			</File>
@@ -1161,10 +1165,6 @@
 			</File>
 			<File
 				RelativePath=".\TextureBasedEventHandler.h"
-				>
-			</File>
-			<File
-				RelativePath=".\trackball.h"
 				>
 			</File>
 			<File
