--- a/VE_Xplorer/XplorerHandlers/SConscript
+++ b/VE_Xplorer/XplorerHandlers/SConscript
@@ -67,7 +67,7 @@ xplorer_srcs = Split("""
    CADTransformEH.cxx
     MaterialModeUpdateEH.cxx
     MaterialUpdateEH.cxx
-    trackball.cxx
+    KeyboardMouse.cxx
     cfdTrackball.cxx
     cfdObjectHandler.cxx
     CreateVisObjectEventHandler.cxx
