Updated Makefile for XplorerHandlers

--- a/VE_Xplorer/XplorerHandlers/Makefile
+++ b/VE_Xplorer/XplorerHandlers/Makefile
@@ -117,6 +117,9 @@ SRCS=\
    KeyboardMouse.cxx\
    cfdTrackball.cxx\
    cfdObjectHandler.cxx\
+	SelectionHandler.cxx\
+	MouseSelection.cxx\
+	WandSelection.cxx\
    CreateVisObjectEventHandler.cxx\
    ClearVisObjectsEventHandler.cxx\
    ChangeCursorEventHandler.cxx\
