XplorerHandlers: Changed SelectionHandler code to handle non-patented builds.

--- a/VE_Xplorer/XplorerHandlers/SConscript
+++ b/VE_Xplorer/XplorerHandlers/SConscript
@@ -70,6 +70,9 @@ xplorer_srcs = Split("""
     KeyboardMouse.cxx
     cfdTrackball.cxx
     cfdObjectHandler.cxx
+    SelectionHandler.cxx
+    MouseSelection.cxx
+    WandSelection.cxx
     CreateVisObjectEventHandler.cxx
     ClearVisObjectsEventHandler.cxx
     ChangeCursorEventHandler.cxx
