--- a/VE_Xplorer/SceneGraph/NURBS/VE_NURBS.vcproj
+++ b/VE_Xplorer/SceneGraph/NURBS/VE_NURBS.vcproj
@@ -66,7 +66,7 @@
 				AdditionalDependencies="osgd.lib osgUtild.lib"
 				OutputFile="$(OutDir)/VE_NURBS_d.dll"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="&quot;$(VE_SUITE_HOME)\lib\win32&quot;;&quot;$(OSGHOME)\lib&quot;"
+				AdditionalLibraryDirectories="&quot;$(VE_SUITE_HOME)\lib\win32&quot;;&quot;$(OSGHOME)\lib\win32&quot;"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/VE_NURBS.pdb"
 				SubSystem="2"
@@ -146,7 +146,7 @@
 				AdditionalDependencies="osg.lib osgUtil.lib"
 				OutputFile="$(OutDir)\VE_NURBS.dll"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="&quot;$(VE_SUITE_HOME)\lib\win32&quot;;&quot;$(OSGHOME)\lib&quot;"
+				AdditionalLibraryDirectories="&quot;$(VE_SUITE_HOME)\lib\win32&quot;;&quot;$(OSGHOME)\lib\win32&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				OptimizeReferences="2"
