added two new utilities to help post process vtk datasets. added functionality to allow the unitwrapper code to work correctly. hopefully added fixes for more ce features in conductor. added dualhead configs to the vesuite distro so that they can be used as examples. these configs also support nav in the display window.

--- a/VE_Xplorer/XplorerHandlers/Makefile
+++ b/VE_Xplorer/XplorerHandlers/Makefile
@@ -117,9 +117,9 @@ SRCS=\
    KeyboardMouse.cxx\
    cfdTrackball.cxx\
    cfdObjectHandler.cxx\
-	SelectionHandler.cxx\
-	MouseSelection.cxx\
-	WandSelection.cxx\
+   SelectionHandler.cxx\
+   MouseSelection.cxx\
+   WandSelection.cxx\
    CreateVisObjectEventHandler.cxx\
    ClearVisObjectsEventHandler.cxx\
    ChangeCursorEventHandler.cxx\
@@ -136,7 +136,8 @@ SRCS=\
    QCLoadFileEH.cxx\
    StoredSceneEH.cxx\
    ChangeWorkingDirectoryEventHandler.cxx\
-   ChangeBackgroundColorEventHandler.cxx
+   ChangeBackgroundColorEventHandler.cxx\
+   DataSetAxis.cxx
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
 EXTRA_LDFLAGS+= -g
