updated the build for osg 1.2

--- a/VE_Xplorer/SceneGraph/NURBS/testNURBS/testNURBS.vcproj
+++ b/VE_Xplorer/SceneGraph/NURBS/testNURBS/testNURBS.vcproj
@@ -64,7 +64,7 @@
 				AdditionalDependencies="osgd.lib Producerd.lib osgProducerd.lib"
 				OutputFile="$(OutDir)\$(ProjectName)d.exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="&quot;$(VE_SUITE_HOME)\lib\win32&quot;;&quot;$(OSGHOME)\lib&quot;"
+				AdditionalLibraryDirectories="&quot;$(VE_SUITE_HOME)\lib\win32&quot;;&quot;$(OSGHOME)\lib\win32&quot;;&quot;$(PRODUCER_HOME)\lib\win32&quot;;&quot;$(OPENTHREADS_HOME)\lib\win32&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				ImportLibrary=""
@@ -141,7 +141,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="osg.lib Producer.lib osgProducer.lib"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="&quot;$(VE_SUITE_HOME)\lib\win32&quot;;&quot;$(OSGHOME)\lib&quot;"
+				AdditionalLibraryDirectories="&quot;$(VE_SUITE_HOME)\lib\win32&quot;;&quot;$(OSGHOME)\lib\win32&quot;;&quot;$(PRODUCER_HOME)\lib\win32&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				OptimizeReferences="2"
