moved files around so now the corba service list is accessible in the guiplugin. this should make xplorer comm much easier in plugins. also cleaned up the ce handling with corbaservicelist.

--- a/VE_Conductor/GUIPlugin/Makefile
+++ b/VE_Conductor/GUIPlugin/Makefile
@@ -45,7 +45,10 @@ SRCS=\
    SummaryResultDialog.cpp \
    TexTable.cpp \
    TextResultDialog.cpp \
-   UIDialog.cpp
+   UIDialog.cpp\
+   OrbThread.cxx\
+   CORBAServiceList.cxx\
+   UI_i.cxx
 
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
