added new eh's to handle dataset viz options

--- a/VE_Xplorer/XplorerHandlers/Makefile
+++ b/VE_Xplorer/XplorerHandlers/Makefile
@@ -137,7 +137,9 @@ SRCS=\
    StoredSceneEH.cxx\
    ChangeWorkingDirectoryEventHandler.cxx\
    ChangeBackgroundColorEventHandler.cxx\
-   DataSetAxis.cxx
+   DataSetAxis.cxx\
+   BBoxEventHandler.cxx\
+   WireframeEventHandler.cxx
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
 EXTRA_LDFLAGS+= -g
