more updates for using axes labels for a dataset

--- a/VE_Xplorer/XplorerHandlers/Makefile
+++ b/VE_Xplorer/XplorerHandlers/Makefile
@@ -140,7 +140,8 @@ SRCS=\
    DataSetAxis.cxx\
    BBoxEventHandler.cxx\
    WireframeEventHandler.cxx\
-   AxesEventHandler.cxx
+   AxesEventHandler.cxx\
+   AxesLabelsEventHandler.cxx
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
 EXTRA_LDFLAGS+= -g
