a new class to draw a scalar bar with osg instead of vtk

--- a/VE_Xplorer/XplorerHandlers/Makefile
+++ b/VE_Xplorer/XplorerHandlers/Makefile
@@ -141,7 +141,8 @@ SRCS=\
    BBoxEventHandler.cxx\
    WireframeEventHandler.cxx\
    AxesEventHandler.cxx\
-   AxesLabelsEventHandler.cxx
+   AxesLabelsEventHandler.cxx\
+   DataSetScalarBar.cxx
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
 EXTRA_LDFLAGS+= -g
