scalar bar event handler and other updates to control the scalar bar

--- a/VE_Xplorer/XplorerHandlers/Makefile
+++ b/VE_Xplorer/XplorerHandlers/Makefile
@@ -142,7 +142,8 @@ SRCS=\
    WireframeEventHandler.cxx\
    AxesEventHandler.cxx\
    AxesLabelsEventHandler.cxx\
-   DataSetScalarBar.cxx
+   DataSetScalarBar.cxx\
+   ScalarBarEventHandler.cxx
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
 EXTRA_LDFLAGS+= -g
